--- a/plantilla.tex
+++ b/plantilla.tex
@@ -33,9 +33,9 @@
 \autores{PhD. Angel Cuenca $^{1}$, Ing. Edgar Basurto $^{2}$, Ing. Rafael Larrea$^{3}$}
 
 \adscripcionautor{%
-$^{1}$En esta sección escriba la adscripción institucional actual en el siguiente orden: Dependencia a la que pertenece en su institución, Institución a la que pertenece,  país;   como se presenta en el ejemplo siguiente.\\
-$^{2}$Laboratorio de Investigación en Sistemas Informáticos e Inteligencia Artificial , Universidad Politécnica de Valencia - España.\\
-$^{3}$......... Autor para correspondencia: correoelectrónico@autorparacorrespondencia}
+$^{1}$Facultad de Ciencias Matemáticas y Físicas, Universidad de Guayaquil - Ecuador.\\
+$^{2}$Investigador Independiente - edabaro0191@gmail.com.\\
+$^{3}$Investigador Independiente - rlarrea@gmail.com}
 
 
 %% Datos para adcripcion
@@ -540,7 +540,8 @@ A continuación, se muestra gráfica de la curva ROC la cual nos muestra el resu
 	\captionof{figure}{Histograma curva ROC.\cite{1}}\label{figura12}
 \end{figura}
 
-Según el estudio realizado en 2020 por Ejaz Ul Haq, Huang Jianjun, Kang Li, Hafeez Ul Haq \& Tijiang Zhang ("An MRI-based deep learning approach for efficient classification of brain tumors") \cite{17} el cual se centró en la detección y diagnóstico de tumores cerebrales utilizando escaneos de resonancia magnética (MRI ) y redes neuronales convolucionales, los autores exploraron la capacidad de las redes neuronales para identificar patrones sutiles en las imágenes de MRI, los resultados experimentales demuestran una precisión del 97,3\% y un coeficiente de similitud de dados (DSC ) del 95,8\% en la tarea de clasificar el tumor cerebral como gliomas, meningiomas o tumores hipofisarios logrados por la primera arquitectura CNN propuesta, mientras que la segunda arquitectura CNN propuesta logró una precisión del 96,5\% con un DSC del 94,3\% en la tarea de clasificar los grados de glioma como HGG  o LGG . 
+Según el estudio realizado en 2020 por Ejaz Ul Haq, Huang Jianjun, Kang Li, Hafeez Ul Haq \& Tijiang Zhang ("An MRI-based deep learning approach for efficient classification of brain tumors") \cite{17} el cual se centró en la detección y diagnóstico de tumores cerebrales utilizando escaneos de resonancia magnética (MRI ) y redes neuronales convolucionales, los autores exploraron la capacidad de las redes neuronales para identificar patrones sutiles en las imágenes de MRI, los resultados experimentales demuestran una precisión del 97,3\% y un coeficiente de similitud de dados (DSC ) del 95,8\% en la tarea de clasificar el tumor cerebral como gliomas, meningiomas o tumores hipofisarios logrados por la primera arquitectura CNN propuesta, mientras que la segunda arquitectura CNN propuesta logró una precisión del 96,5\% con un DSC del 94,3\% en la tarea de clasificar los grados de glioma como HGG  o LGG . \\
+
 Como se muestra en el estudio, basados en artículos científicos similares con alto grado de precisión, hemos planteado un caso con un segmento de imágenes de RX Cerebrales clasificados por tumorales y no tumorales; como VGGNet-16 se caracteriza por tener una arquitectura profunda y compleja, argumentada por 16 capas convolucionales y 3 capas totalmente conectadas. Estas capas facilitan a extraer características de las imágenes, mientras que las 3 capas son usadas para la clasificación. 
 A lo largo de las etapas, se tomaron decisiones y ajustes clave que contribuyeron al éxito del modelo.
 \begin{itemize}
