--- a/plantilla.tex
+++ b/plantilla.tex
@@ -183,7 +183,7 @@ In conclusion, the research demonstrates that the combination of the VGGNet16 ar
 
 El análisis de imágenes médicas ha experimentado un notable avance gracias a los desarrollos en inteligencia artificial y aprendizaje profundo. Sin embargo, su interpretación precisa puede ser un desafío debido a la complejidad anatómica y a las sutilezas presentes en las patologías cerebrales \cite{1}.\\
 
-En este contexto, las redes neuronales convolucionales han demostrado un gran potencial para mejorar la precisión y eficiencia del diagnóstico radiológico. En particular, las CNN  se han convertido en una herramienta poderosa para el análisis de imágenes \cite{2}, entre ellas se destaca VGGNet  por su efectividad.\\
+En este contexto, las redes neuronales convolucionales han demostrado un gran potencial para mejorar la precisión y eficiencia del diagnóstico radiológico. En particular, las CNN\footnote{CNN - Convolutional Neural Network trad. \textit{Redes Neuronales Convolucionales}}  se han convertido en una herramienta poderosa para el análisis de imágenes \cite{2}, entre ellas se destaca VGGNet\footnote{VGGNet – Visual Geometry Group Network}  por su efectividad.\\
 
 En sí las CNN es un algoritmo de aprendizaje profundo diseñados específicamente para el procesamiento de imágenes. Utilizan capas de convolución para extraer características relevantes, permitiéndoles aprender patrones y estructuras complejas presentes en los datos. La arquitectura VGGNet, desarrollada por la Universidad de Oxford, se destaca por su simplicidad y profundidad \cite{3}. Compuesta por una serie de capas le da la capacidad para aprender representaciones jerárquicas de las imágenes \cite{3}.\\
 
@@ -270,14 +270,14 @@ La IA abarca un amplio espectro de enfoques y técnicas, desde algoritmos simple
 La inteligencia artificial tiene aplicaciones en diversas industrias, como la atención médica, la automoción, la financiación, la manufactura, la educación y muchos otros campos. Su desarrollo y avance continúan transformando la forma en que interactuamos con la tecnología y cómo se abordan los desafíos en diferentes áreas de la vida. \cite{7}
 
 \subsection{CNN - Convolutional Neural Network} 
-Una Red Neuronal Convolucional (CNN, por sus siglas en inglés, Convolutional Neural Network) es un tipo de arquitectura de redes neuronales profundas especialmente diseñada para procesar y analizar datos de tipo grid , como imágenes y videos \cite{8}.  Las CNN se han vuelto fundamentales en el campo de la visión por computadora y han revolucionado la forma en que se abordan tareas como el reconocimiento de objetos, la detección de características y la segmentación de imágenes \cite{9}.
+Una Red Neuronal Convolucional (CNN, por sus siglas en inglés, Convolutional Neural Network) es un tipo de arquitectura de redes neuronales profundas especialmente diseñada para procesar y analizar datos de tipo grid\footnote{Datos tipos grid, refiere a datos presentados en una matriz} , como imágenes y videos \cite{8}.  Las CNN se han vuelto fundamentales en el campo de la visión por computadora y han revolucionado la forma en que se abordan tareas como el reconocimiento de objetos, la detección de características y la segmentación de imágenes \cite{9}.
 Las características distintivas de una CNN incluyen:
 \begin{itemize}
-	\item Convoluciones: Las convoluciones son operaciones matemáticas que aplican un filtro (kernel) a una región de la imagen para extraer características relevantes, como bordes, texturas y patrones. Estas operaciones se realizan en varias capas de la red para capturar características de diferentes niveles de abstracción.
-	\item Capas de Pooling: Estas capas reducen el tamaño de la representación espacial de las características, disminuyendo así la cantidad de información y los parámetros de la red. La operación común de pooling es el max-pooling, que selecciona el valor máximo de un conjunto de valores en una región.
-	\item Capas de Activación: Las funciones de activación, como la función ReLU (Rectified Linear Unit), introducen no linealidad en la red y permiten que la CNN capture relaciones y patrones más complejos en los datos.
-	\item Capas Totalmente Conectadas: Al final de la red, se pueden utilizar capas totalmente conectadas para realizar tareas de clasificación u otras tareas específicas. Estas capas combinan las características extraídas de las capas anteriores y generan la salida final.
-	\item Aprendizaje Jerárquico de Características: A través de sus capas, las CNN aprenden automáticamente jerarquías de características, desde características simples (como bordes) en las capas iniciales hasta características más abstractas y complejas (como formas y objetos) en las capas posteriores.
+	\item \textbf{Convoluciones}: Las convoluciones son operaciones matemáticas que aplican un filtro (kernel) a una región de la imagen para extraer características relevantes, como bordes, texturas y patrones. Estas operaciones se realizan en varias capas de la red para capturar características de diferentes niveles de abstracción.
+	\item \textbf{Capas de Pooling}: Estas capas reducen el tamaño de la representación espacial de las características, disminuyendo así la cantidad de información y los parámetros de la red. La operación común de pooling es el max-pooling, que selecciona el valor máximo de un conjunto de valores en una región.
+	\item \textbf{Capas de Activación}: Las funciones de activación, como la función ReLU (Rectified Linear Unit), introducen no linealidad en la red y permiten que la CNN capture relaciones y patrones más complejos en los datos.
+	\item \textbf{Capas Totalmente Conectadas}: Al final de la red, se pueden utilizar capas totalmente conectadas para realizar tareas de clasificación u otras tareas específicas. Estas capas combinan las características extraídas de las capas anteriores y generan la salida final.
+	\item \textbf{Aprendizaje Jerárquico de Características}: A través de sus capas, las CNN aprenden automáticamente jerarquías de características, desde características simples (como bordes) en las capas iniciales hasta características más abstractas y complejas (como formas y objetos) en las capas posteriores.
 \end{itemize}
 
 Las CNN se han utilizado con éxito en una variedad de aplicaciones, como:
@@ -296,14 +296,14 @@ Las CNN han demostrado ser altamente eficaces en la extracción de característi
 La Red Visual Geometry Group (VGG) es una arquitectura de red neuronal convolucional (CNN) que se destacó en el Concurso de Reconocimiento Visual de ImagenNet en 2014 \cite{11}. Fue desarrollada por el Grupo de Geometría Visual (Visual Geometry Group) en la Universidad de Oxford. La arquitectura VGG se caracteriza por su profundidad y simplicidad en la estructura de capas, lo que la hace fácil de entender y entrenar \cite{12}.
 Las principales características de la arquitectura VGG son:
 \begin{itemize}
-	\item Profundidad: A diferencia de algunas arquitecturas más tempranas que utilizaban un número limitado de capas, VGG emplea una estructura profunda con múltiples capas convolucionales y capas totalmente conectadas. Su enfoque en la profundidad contribuye a su capacidad para aprender representaciones más ricas y complejas de los datos.
-	\item Tamaño de Filtro Pequeño: VGG utiliza filtros convolucionales de tamaño pequeño (3x3) en todas sus capas convolucionales, seguidos de una función de activación ReLU . Esta elección de filtros pequeños permite la captura de características más locales y facilita el aprendizaje de representaciones detalladas de la imagen.
-	\item Max-Pooling: Después de cada conjunto de capas convolucionales, VGG utiliza capas de max-pooling para reducir el tamaño espacial de las características y disminuir la cantidad de parámetros en la red.
-	\item Capas Totalmente Conectadas: Al final de la red, VGG utiliza capas totalmente conectadas para llevar a cabo tareas específicas, como la clasificación. Estas capas combinan las características extraídas en las capas anteriores y generan la salida final.
-	\item Variantes: VGG se presenta en varias variantes según la profundidad, como VGG16 y VGG19, que indican el número de capas en la red.
+	\item \textbf{Profundidad}: A diferencia de algunas arquitecturas más tempranas que utilizaban un número limitado de capas, VGG emplea una estructura profunda con múltiples capas convolucionales y capas totalmente conectadas. Su enfoque en la profundidad contribuye a su capacidad para aprender representaciones más ricas y complejas de los datos.
+	\item \textbf{Tamaño de Filtro Pequeño}: VGG utiliza filtros convolucionales de tamaño pequeño (3x3) en todas sus capas convolucionales, seguidos de una función de activación ReLU\footnote{ReLU (Rectified Linear Unit), función de activación no lineal que se usa en redes neuronales convolucionales para introducir no linealidad y eliminar valores negativos.} . Esta elección de filtros pequeños permite la captura de características más locales y facilita el aprendizaje de representaciones detalladas de la imagen.
+	\item \textbf{Max-Pooling}: Después de cada conjunto de capas convolucionales, VGG utiliza capas de max-pooling para reducir el tamaño espacial de las características y disminuir la cantidad de parámetros en la red.
+	\item \textbf{Capas Totalmente Conectadas}: Al final de la red, VGG utiliza capas totalmente conectadas para llevar a cabo tareas específicas, como la clasificación. Estas capas combinan las características extraídas en las capas anteriores y generan la salida final.
+	\item \textbf{Variantes}: VGG se presenta en varias variantes según la profundidad, como VGG16 y VGG19, que indican el número de capas en la red.
 \end{itemize}
 
-Aunque VGG fue una de las arquitecturas clave en la evolución de las redes neuronales convolucionales, en la práctica, las arquitecturas más modernas, como las redes ResNet , Inception  y las basadas en atención, han superado sus resultados en términos de precisión y eficiencia en diversas tareas de visión por computadora \cite{13}. Sin embargo, VGG sigue siendo relevante para entender los principios básicos de las CNN y su importancia en el desarrollo de arquitecturas más avanzadas. 
+Aunque VGG fue una de las arquitecturas clave en la evolución de las redes neuronales convolucionales, en la práctica, las arquitecturas más modernas, como las redes ResNet\footnote{ResNet, red neuronal profunda que usa conexiones residuales para mejorar el aprendizaje de las capas.} , Inception\footnote{Inception, red neuronal convolucional con 48 capas de profundidad.}  y las basadas en atención, han superado sus resultados en términos de precisión y eficiencia en diversas tareas de visión por computadora \cite{13}. Sin embargo, VGG sigue siendo relevante para entender los principios básicos de las CNN y su importancia en el desarrollo de arquitecturas más avanzadas. 
 
 \subsection{Imágenes de Rayos X}
 Las imágenes de rayos X son un tipo de técnica de diagnóstico médico que utiliza radiación electromagnética de alta energía para crear imágenes del interior del cuerpo humano. Esta tecnología permite a los médicos visualizar estructuras internas como huesos, órganos y tejidos blandos sin necesidad de cirugía invasiva \cite{14}.\\
@@ -323,9 +323,9 @@ Algunas aplicaciones comunes de las imágenes de rayos X incluyen:
 Es importante destacar que, si bien las imágenes de rayos X son valiosas herramientas de diagnóstico, también implican la exposición a radiación ionizante. Los profesionales médicos toman precauciones para minimizar la exposición del paciente a la radiación y evalúan cuidadosamente los beneficios frente a los riesgos antes de realizar estudios de imágenes de rayos X \cite{16}.
 
 \subsection{Planteamiento}
-Se desea realizar el entrenamiento de un modelo CNN en VGGNet16 para lo cual se acudió a Kaggle  con la finalidad de obtener una fuente de imágenes de RX cerebrales, se encontró el dataset de imágenes Brian Tumor Dataset  con una clasificación de imágenes entre Brain Tumor (tumor) y Healty (sanos); uso de COLAB  como herramienta por el uso cuadernos de Jupiter y lenguaje Python ideales para entrenamientos en inteligencia artificial. 
+Se desea realizar el entrenamiento de un modelo CNN en VGGNet16 para lo cual se acudió a Kaggle\footnote{Kaggle, plataforma web que reúne dataset del todo el mundo.}  con la finalidad de obtener una fuente de imágenes de RX cerebrales, se encontró el dataset de imágenes Brian Tumor Dataset\footnote{Brian Tumor Dataset, Kaggle link \url{https://www.kaggle.com/datasets/preetviradiya/brian-tumor-dataset}}  con una clasificación de imágenes entre Brain Tumor (tumor) y Healty (sanos); uso de COLAB\footnote{COLAB, desarrollador de programas de Python para escribir y ejecutar códigos en un navegador web.} como herramienta por el uso cuadernos de Jupiter y lenguaje Python ideales para entrenamientos en inteligencia artificial. 
 \subsection{Análisis de datos}
-Evaluando el dataset descargado, se dispone a seleccionar y mover al azar 58 imágenes de ambos segmentos los cuales serán usados para la evaluación del modelo, se crea archivo csv con data de respaldo identificando las imágenes con tumor y no-tumor, posterior se comprime los directorios y se hospeda en GitHub  para uso público y del estudio.
+Evaluando el dataset descargado, se dispone a seleccionar y mover al azar 58 imágenes de ambos segmentos los cuales serán usados para la evaluación del modelo, se crea archivo csv con data de respaldo identificando las imágenes con tumor y no-tumor, posterior se comprime los directorios y se hospeda en GitHub\footnote{Link de archivos \url{https://github.com/Rafael1108/datasheet/tree/main/BrainTumorData}} para uso público y del estudio.
 Detalle de directorios:
 \begin{itemize}
 	\item \textbf{No\_Brain\_Tumor}: directorio que contiene banco de imágenes de rayos x de pacientes que no tienen tumor cerebral, contiene 2057 imágenes.
@@ -540,7 +540,7 @@ A continuación, se muestra gráfica de la curva ROC la cual nos muestra el resu
 	\captionof{figure}{Histograma curva ROC.\cite{1}}\label{figura12}
 \end{figura}
 
-Según el estudio realizado en 2020 por Ejaz Ul Haq, Huang Jianjun, Kang Li, Hafeez Ul Haq \& Tijiang Zhang ("An MRI-based deep learning approach for efficient classification of brain tumors") \cite{17} el cual se centró en la detección y diagnóstico de tumores cerebrales utilizando escaneos de resonancia magnética (MRI ) y redes neuronales convolucionales, los autores exploraron la capacidad de las redes neuronales para identificar patrones sutiles en las imágenes de MRI, los resultados experimentales demuestran una precisión del 97,3\% y un coeficiente de similitud de dados (DSC ) del 95,8\% en la tarea de clasificar el tumor cerebral como gliomas, meningiomas o tumores hipofisarios logrados por la primera arquitectura CNN propuesta, mientras que la segunda arquitectura CNN propuesta logró una precisión del 96,5\% con un DSC del 94,3\% en la tarea de clasificar los grados de glioma como HGG  o LGG . \\
+Según el estudio realizado en 2020 por Ejaz Ul Haq, Huang Jianjun, Kang Li, Hafeez Ul Haq \& Tijiang Zhang ("An MRI-based deep learning approach for efficient classification of brain tumors") \cite{17} el cual se centró en la detección y diagnóstico de tumores cerebrales utilizando escaneos de resonancia magnética (MRI\footnote{MRI, Magnetic resonance imaging, trad. \textit{Imagen por resonancia magnética.}}) y redes neuronales convolucionales, los autores exploraron la capacidad de las redes neuronales para identificar patrones sutiles en las imágenes de MRI, los resultados experimentales demuestran una precisión del 97,3\% y un coeficiente de similitud de dados (DSC\footnote{DSC, coeficiente de Sørensen-Dice, una medida estadística que compara la similitud de dos muestras basada en los elementos que tienen en común.}) del 95,8\% en la tarea de clasificar el tumor cerebral como gliomas, meningiomas o tumores hipofisarios logrados por la primera arquitectura CNN propuesta, mientras que la segunda arquitectura CNN propuesta logró una precisión del 96,5\% con un DSC del 94,3\% en la tarea de clasificar los grados de glioma como HGG\footnote{HGG, Glioma de alto grado.}  o LGG\footnote{LGG, Glioma de bajo grado.}. \\
 
 Como se muestra en el estudio, basados en artículos científicos similares con alto grado de precisión, hemos planteado un caso con un segmento de imágenes de RX Cerebrales clasificados por tumorales y no tumorales; como VGGNet-16 se caracteriza por tener una arquitectura profunda y compleja, argumentada por 16 capas convolucionales y 3 capas totalmente conectadas. Estas capas facilitan a extraer características de las imágenes, mientras que las 3 capas son usadas para la clasificación. 
 A lo largo de las etapas, se tomaron decisiones y ajustes clave que contribuyeron al éxito del modelo.
